recursa-diagram-macros/tests/trybuild/conflict.stderr
error: `skip` and `label` are mutually exclusive
 --> tests/trybuild/conflict.rs:5:5
  |
5 |     #[railroad(label = "X", skip)]
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
